Reformat and fix smells and technical debt